--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -10,5 +10,9 @@
 	<string>86E1BC32-4156-4508-9861-FFBBE86153F2</string>
 	<key>WCEditable</key>
 	<integer>0</integer>
+	<key>WCFileExtensions</key>
+	<array>
+		<string>yml</string>
+	</array>
 </dict>
 </plist>
