--- a/Contents/Resources/Gemfile
+++ b/Contents/Resources/Gemfile
@@ -1,5 +1,18 @@
 source 'https://rubygems.org'
 ruby '2.4.1'
 gem 'jekyll'
+gem 'jekyll-theme-architect'
+gem 'jekyll-theme-cayman'
+gem 'jekyll-theme-dinky'
+gem 'jekyll-theme-hacker'
+gem 'jekyll-theme-leap-day'
+gem 'jekyll-theme-merlot'
+gem 'jekyll-theme-midnight'
+gem 'jekyll-theme-minimal'
+gem 'jekyll-theme-modernist'
+gem 'jekyll-theme-primer'
+gem 'jekyll-theme-slate'
+gem 'jekyll-theme-tactile'
+gem 'jekyll-theme-time-machine'
 gem 'minima'
 gem 'repla'
