--- a/Contents/Resources/bundle/ruby/2.4.0/gems/commonmarker-0.17.13/ext/commonmarker/Makefile
+++ b/Contents/Resources/bundle/ruby/2.4.0/gems/commonmarker-0.17.13/ext/commonmarker/Makefile
@@ -31,8 +31,8 @@ rubyhdrdir = $(includedir)/$(RUBY_VERSION_NAME)
 vendorarchdir = $(vendorlibdir)/$(sitearch)
 vendorlibdir = $(vendordir)/$(ruby_version)
 vendordir = $(rubylibprefix)/vendor_ruby
-sitearchdir = $(DESTDIR)./.gem.20220704-84695-1jo6i1u
-sitelibdir = $(DESTDIR)./.gem.20220704-84695-1jo6i1u
+sitearchdir = $(DESTDIR)./.gem.20220704-86756-13aqktf
+sitelibdir = $(DESTDIR)./.gem.20220704-86756-13aqktf
 sitedir = $(rubylibprefix)/site_ruby
 rubyarchdir = $(rubylibdir)/$(arch)
 rubylibdir = $(rubylibprefix)/$(ruby_version)
