--- a/Contents/Resources/bundle/ruby/2.4.0/gems/eventmachine-1.2.7/ext/Makefile
+++ b/Contents/Resources/bundle/ruby/2.4.0/gems/eventmachine-1.2.7/ext/Makefile
@@ -31,8 +31,8 @@ rubyhdrdir = $(includedir)/$(RUBY_VERSION_NAME)
 vendorarchdir = $(vendorlibdir)/$(sitearch)
 vendorlibdir = $(vendordir)/$(ruby_version)
 vendordir = $(rubylibprefix)/vendor_ruby
-sitearchdir = $(DESTDIR)./.gem.20220704-71227-q5r349
-sitelibdir = $(DESTDIR)./.gem.20220704-71227-q5r349
+sitearchdir = $(DESTDIR)./.gem.20220704-86756-smgovc
+sitelibdir = $(DESTDIR)./.gem.20220704-86756-smgovc
 sitedir = $(rubylibprefix)/site_ruby
 rubyarchdir = $(rubylibdir)/$(arch)
 rubylibdir = $(rubylibprefix)/$(ruby_version)
