--- a/Contents/Resources/bundle/ruby/2.4.0/gems/nokogiri-1.10.10/ext/nokogiri/Makefile
+++ b/Contents/Resources/bundle/ruby/2.4.0/gems/nokogiri-1.10.10/ext/nokogiri/Makefile
@@ -31,8 +31,8 @@ rubyhdrdir = $(includedir)/$(RUBY_VERSION_NAME)
 vendorarchdir = $(vendorlibdir)/$(sitearch)
 vendorlibdir = $(vendordir)/$(ruby_version)
 vendordir = $(rubylibprefix)/vendor_ruby
-sitearchdir = $(DESTDIR)./.gem.20220704-71227-lm4y1v
-sitelibdir = $(DESTDIR)./.gem.20220704-71227-lm4y1v
+sitearchdir = $(DESTDIR)./.gem.20220704-86756-1oqvok6
+sitelibdir = $(DESTDIR)./.gem.20220704-86756-1oqvok6
 sitedir = $(rubylibprefix)/site_ruby
 rubyarchdir = $(rubylibdir)/$(arch)
 rubylibdir = $(rubylibprefix)/$(ruby_version)
